@@ -15,6 +15,8 @@ For a complete change history, please see the Subversion log comments.
 Current Version (SVN trunk):
 ----------------------------
 
+- Fixed OWS usage of multiple layers with same name (#3778)
+
 - WCS implementation should not lookup wms_* metadata (#3779)
 
 - WCS 2.0: Adjusted definition of rangeType.
